target/debug/build/anyhow-a0dc0cf83ffba72c/stderr
error[E0554]: `#![feature]` may not be used on the stable release channel
 --> /root/rust_projects/animation_test_rust/target/debug/build/anyhow-a0dc0cf83ffba72c/out/probe.rs:2:5
  |
2 |     #![feature(backtrace)]
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0554`.
